--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@ unless you know exactly what you're doing! -->
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">
 
-    <title>Feel the Force</title>
+    <title>Jedi Meditation Training</title>
   </head>
   <body>
     <noscript>
